--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+	"include": ["env.d.ts", "src/**/*", "src/*.vue", "src/**/*.vue"],
 	"compilerOptions": {
 		// Enable latest features
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
